<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:minWidth="300dp"
	android:orientation="vertical"
	android:padding="@dimen/standard_view_padding"
	android:background="@color/standard_grey" >

	<TextView
		android:id="@+id/title"
		style="@style/styledDialogHeader"
		android:text="@string/edit_note" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >

		<TextView
			style="@style/listItemBlueText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="@dimen/standard_text_padding"
			android:text="@string/list_item_name_text" />

		<TextView
			style="@style/listItemBlackText"
			android:id="@+id/note_username"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Username Goes Here" />

	</LinearLayout>

	<EditText
		android:id="@+id/note_edittext"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textMultiLine"
		android:lines="5"
		android:gravity="left|top"
		android:textSize="@dimen/edit_text_text_size"
		android:focusable="false" />

	<Button
		style="@style/buttonStyle"
		android:id="@+id/dismiss_button"
		android:layout_width="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/dismiss"
		android:paddingLeft="5dp"
		android:paddingRight="5dp" />

</LinearLayout>